TEST_PROGRAMS/VALID/shabbir_hussain/prog2.min
#This program takes the logbase2 of a number X

var x : int;
var pwr : int;

x = 1024;
pwr = 0;

while x do
x = x/2;
pwr = pwr + 1;
done

print pwr;

